--- a/website/index.html
+++ b/website/index.html
@@ -1,14 +1,42 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Imbus</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
 
+<body>
+    <div class="top">
+        <h1>Imbus</h1>
+        <img src="images/logo2.png" id="logo">
+    </div>
+
+    <div class="tekst">
+        <p>Imbus je nadolazeća aplikacija za pronalazak majstora.</p>
+        <p>Razvijaju je studenti Tehničkog veleučilišta u Zagrebu za natjecanje Mc2:
+        <ul>
+            <li>Zvonimir Škegro (dizajn)</li>
+            <li>Oliver Živčić (programiranje)</li>
+            <li>Leo Stričak (programiranje)</li>
+        </ul>
+        </p>
+        <p>Programski kod je dostupan na <a href="https://github.com/leostricak22/imbus">GitHubu</a>.</p>
+        <br>
+    </div>
+
+
+
+    <div class="download">
+        <img src="images/googleplay.png" id="googleplay"> <img src="images/appstore.png" id="appstore">
+
+    </div>
+
+    x
 </body>
+
 </html>
